# Rocket_Lander

./: .gitignore  .gitignore.txt  .gitmodules  AeroTechG138T_thrustcurve.csv  AeroTechG77R_thrustcurve.csv  AeroTechG79W_thrustcurve.csv  Altitude Calculations_angles.xlsx  Create_IMU_noisy_data.m  DART_AeroTechG25W_thrustcurve.csv  DataIntegrationAndSimulation.mlx  Data_Processing.mlx  Data_Simulation.mlx  Jenkinsfile  PID_tuner_descent_script.m  README.md  RocketLander_version2.slx  RocketLander_version2.slxc  RocketLander_version2_2021a_version.mdl  RocketLander_version3.mdl  RocketLander_version3.slx  Rocket_Lander_Nate_December.m  Rocket_Lander_version4.mlx  SCH_DART-Flight-Computer-4_2024-07-14.json  controller_pitch.mlx  flight_simulator_activity_diagram.wsd  oneD_rocket_Lander.m  optimal solution states.mat  requirements.txt  twoD_FreeFall.m  twoD_initial.mat  twoD_rocket_Lander.m
ground_station/: CMakeLists.txt  Ground Station Electronics.json  Makefile  README.md  ground_station.cpp  ground_station.ino
ground_station/ARCHIVE/: CMakeLists.txt  Makefile  ground_station.ino
ground_station/FlightTelemetryV3_attitude_control_test/: FlightTelemetryV3_attitude_control_test.pde
ground_station/FlightTelemetryV4_act_1/: Data From 4-4-12-23-25.txt  Data From 4-4-12-58-4.txt  Data From 4-4-13-17-49.txt  Data From 4-4-13-20-1.txt  Data From 4-4-13-20-40.txt  Data From 4-4-13-25-5.txt  Data From 4-4-13-5-24.txt  Data From 4-4-13-8-0.txt  Data From 4-5-10-38-26.txt  Data From 4-5-11-39-50.txt  Data From 4-5-16-41-1.txt  Data From 4-6-9-39-35.txt  (+1 more)
simulation/: README.md  (+11 more)
(+131 files in other folders)
